--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
@@ -87,6 +92,62 @@
             <img src="./images/img4.jpg" alt="Daniel Wilson foto" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img src="./images/img5.jpg" alt="Bank App fotos" width="360" />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/img6.jpg"
+              alt="Phone with scaner foto"
+              width="360"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/img7.jpg"
+              alt="Phone and notebook foto"
+              width="360"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/img8.jpg"
+              alt="Wheel of a car foto"
+              width="360"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/img9.jpg"
+              alt="Phone with Screen Illustrations"
+              width="360"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+
+          <li>
+            <img src="./images/img10.jpg" alt="Happy girl" width="360" />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
