--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
   <body>
     <header class="header-page">
       <nav class="nav-header">
-        <a class="logo header-logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
+        <a class="header-logo" href="./index.html">Web<span>Studio</span></a>
         <ul class="nav-list">
           <li class="nav-item">
             <a class="nav-link" href="./index.html">Studio</a>
@@ -50,131 +48,169 @@
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="main-section">
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="main-btn">Order Service</button>
       </section>
-      <section>
-        <h2 hidden>Our Team</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="features-section">
+        <h2 class="features-title" hidden>Features</h2>
+        <ul class="features-list">
+          <li class="features-item">
+            <h3 class="features-subtitle sections-subtitle">Strategy</h3>
+            <p class="features-text sections-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-subtitle sections-subtitle">Punctuality</h3>
+            <p class="features-text sections-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-subtitle sections-subtitle">Diligence</h3>
+            <p class="features-text sections-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-subtitle sections-subtitle">Technologies</h3>
+            <p class="features-text sections-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
-            <img src="./images/img1.jpg" alt="Mark Guerrero foto" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+      <section class="team-section">
+        <h2 class="team-title sections-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
+            <img
+              src="./images/img1.jpg"
+              alt="Mark Guerrero foto"
+              width="264"
+              class="team-foto"
+            />
+            <h3 class="team-subtitle sections-subtitle">Mark Guerrero</h3>
+            <p class="team-text sections-text">Product Designer</p>
           </li>
 
-          <li>
-            <img src="./images/img2.jpg" alt="Tom Ford foto" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+          <li class="team-item">
+            <img
+              src="./images/img2.jpg"
+              alt="Tom Ford foto"
+              width="264"
+              class="team-foto"
+            />
+            <h3 class="team-subtitle sections-subtitle">Tom Ford</h3>
+            <p class="team-text sections-text">Frontend Developer</p>
           </li>
 
-          <li>
-            <img src="./images/img3.jpg" alt="Camila Garcia foto" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+          <li class="team-item">
+            <img
+              src="./images/img3.jpg"
+              alt="Camila Garcia foto"
+              width="264"
+              class="team-foto"
+            />
+            <h3 class="team-subtitle sections-subtitle">Camila Garcia</h3>
+            <p class="team-text sections-text">Marketing</p>
           </li>
 
-          <li>
-            <img src="./images/img4.jpg" alt="Daniel Wilson foto" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+          <li class="team-item">
+            <img
+              src="./images/img4.jpg"
+              alt="Daniel Wilson foto"
+              width="264"
+              class="team-foto"
+            />
+            <h3 class="team-subtitle sections-subtitle">Daniel Wilson</h3>
+            <p class="team-text sections-text">UI Designer</p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Portfolio</h2>
-        <ul>
-          <li>
-            <img src="./images/img5.jpg" alt="Bank App fotos" width="360" />
-            <h3>Banking App</h3>
-            <p>App</p>
+      <section class="portfolio-section">
+        <h2 class="portfolio-title sections-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
+            <img
+              src="./images/img5.jpg"
+              alt="Bank App fotos"
+              width="360"
+              class="portfolio-foto"
+            />
+            <h3 class="portfolio-subtitle sections-subtitle">Banking App</h3>
+            <p class="portfolio-text sections-text">App</p>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/img6.jpg"
               alt="Phone with scaner foto"
               width="360"
+              class="portfolio-foto"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-subtitle sections-subtitle">
+              Cashless Payment
+            </h3>
+            <p class="portfolio-text sections-text">Marketing</p>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/img7.jpg"
               alt="Phone and notebook foto"
               width="360"
+              class="portfolio-foto"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-subtitle sections-subtitle">Meditation App</h3>
+            <p class="portfolio-text sections-text">App</p>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/img8.jpg"
               alt="Wheel of a car foto"
               width="360"
+              class="portfolio-foto"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-subtitle sections-subtitle">Taxi Service</h3>
+            <p class="portfolio-text sections-text">Marketing</p>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/img9.jpg"
               alt="Phone with Screen Illustrations"
               width="360"
+              class="portfolio-foto"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-subtitle sections-subtitle">
+              Screen Illustrations
+            </h3>
+            <p class="portfolio-text sections-text">Design</p>
           </li>
 
-          <li>
-            <img src="./images/img10.jpg" alt="Happy girl" width="360" />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+          <li class="portfolio-item">
+            <img
+              src="./images/img10.jpg"
+              alt="Happy girl"
+              width="360"
+              class="portfolio-foto"
+            />
+            <h3 class="portfolio-subtitle sections-subtitle">Online Courses</h3>
+            <p class="portfolio-text sections-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer-page">
+      <a class="footer-logo" href="./index.html">Web<span>Studio</span></a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
