--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   <body>
     <header class="header-page">
       <nav class="nav-header">
-        <a class="header-logo" href="./index.html">Web<span>Studio</span></a>
+        <a class="header-logo" href="./index.html"
+          >Web<span class="header-part">Studio</span></a
+        >
         <ul class="nav-list">
           <li class="nav-item">
             <a class="nav-link" href="./index.html">Studio</a>
@@ -209,7 +211,9 @@
       </section>
     </main>
     <footer class="footer-page">
-      <a class="footer-logo" href="./index.html">Web<span>Studio</span></a>
+      <a class="footer-logo" href="./index.html"
+        >Web<span class="footer-part">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
